--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # - name: Install prerequisites
-      #   run: sudo apt-get install -y libssl-dev check
+      - name: Install prerequisites
+        run: sudo apt-get install -y check
 
       - name: Build tests
         run: make test
 
       - name: Run tests
-        run: ./test
+        run: LD_LIBRARY_PATH=./ ./test
